# nostr_wallet_connect

./: Cargo.toml  README.md
src/: main.rs
