[package]
name = "nwc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nostr = { version = "0.22.0" }
tungstenite = { version = "0.19", features = ["rustls-tls-webpki-roots"] }
log = "0.4.0"
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
zebedee-rust = "0.3.6"
tokio = { version = "1", features = ["full"] }
url = "2.3.1"

[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

